updated decline project

--- a/pub/projects/decline/notebook/decline.ipynb
+++ b/pub/projects/decline/notebook/decline.ipynb
@@ -10,7 +10,7 @@
     "<!-- Author: -->  \n",
     "**Prepared as part of Python preparatory course**\n",
     "\n",
-    "Date: **Jul 10, 2019**\n",
+    "Date: **Aug 14, 2019**\n",
     "\n",
     "**Summary.** In this exercise we will look closer at some of the data that is\n",
     "available at the Norwegian Petroleum Department\n",
@@ -82,7 +82,15 @@
     "  in the catalog or from the [NPD web site](http://factpages.npd.no/factpages/), into a database\n",
     "\n",
     "* Extract production data from the Draugen field, and store them in a text file called\n",
-    "  `draugen.txt`. The format should be: `Year` (first column), `Month` (second column) , and `OilProd` (third column). \n",
+    "  `draugen.txt`. The format should be: `Year` (first column), `Month`\n",
+    "  (second column), and `OilProd` (third column).\n",
+    "\n",
+    "* If you do not want to use databases: Simply open the file\n",
+    "  `field_production_gross_monthly.xls`, in the catalog or from the\n",
+    "  [NPD web site](http://factpages.npd.no/factpages/). Search in the\n",
+    "  Excel file after \"Draugen\", copy the data from all the rows relevant\n",
+    "  for Draugen (row 1623 to 1921) and paste it into a file (using\n",
+    "  e.g. notepad or some other text editor). Save the file as 'draugen.txt'. \n",
     "\n",
     "# Exercise 2: Importing and plotting data with Python\n",
     "\n",
@@ -115,8 +123,8 @@
     "**Step 2.**\n",
     "It is more practical to have the production data to start at $t=0$. In\n",
     "the following we will assume that you have organized the oil production\n",
-    "data from Draugen into Numpy arrays, e.g. `Year` (first column), `Month`\n",
-    "(second column) , and `OilProd` (third column)."
+    "data from Draugen into Numpy arrays, e.g. `Year`, `Month`, and\n",
+    "`OilProd`."
    ]
   },
   {
